# slices-trial-service

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
agents/: TrialEligibilityAgent.py
database/: mongo_db_connection.py
database/document_retrieval/: fetch_embedded_document.py  fetch_preprocessed_trial_document_with_nct_id.py  fetch_processed_trial_document_with_nct_id.py  fetch_similar_trials_inputs_with_ecid.py  fetch_trial_source.py  record_eligibility_criteria_job.py  store_notification_data.py  store_similar_trials.py  update_workflow_status.py
document_retrieval/models/: db_models.py  models.py  routes_models.py
document_retrieval/routes/: search_routes.py
document_retrieval/services/: fetch_documents_service.py  fetch_similar_documents_extended.py  generate_trial_eligibility_certeria.py  pdf_extraction_service.py
document_retrieval/utils/: calculate_weighted_similarity_score.py  categorize_eligibility_criteria.py  categorize_generated_criteria.py  fetch_trial_filters.py  generate_metrics_prompt.py  merge_duplicate_values.py  process_criteria.py  process_filters.py  prompts.py
document_retrieval/utils/pdf_extraction/: extract_index_keys.py  (+2 more)
providers/aws/: aws_bedrock_connection.py  aws_s3_connection.py
providers/aws_bedrock/: aws_bedrock_connection.py
providers/bio_bert/: generate_embdedings_bio_bert.py
providers/openai/: azure_openai_connection.py  generate_embeddings.py  openai_connection.py
providers/pinecone/: pinecone_connection.py  similarity_search_service.py
utils/: generate_object_id.py
(+6 files in other folders)
